New song of the week page

--- a/songs.html
+++ b/songs.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
-  <title>Jaymes Garbe</title> 
+  <title>Jaymes Garbe: Song of the Week</title> 
   <style> 
     body {
       background: top center fixed #3A606E;
@@ -100,8 +100,11 @@
     .title {
       font-weight: bold;
     }
-    h1{
+    h1, h2 {
         text-align: center;
+    }
+    h2 {
+        font-family: fantasy;
     }
   </style> 
   </head> 
@@ -117,52 +120,15 @@
     </ul>
 	 </div>
  <div id="main">
-  <h1>Jaymes Garbe</h1>
-  
-  <div class="divider">Education</div> 
-  
+  <h1>Song of the Week</h1> 
+  <h2>Week 1: Desafinado - Kali Uchis</h2>
   <div class="inner">
-    <p><b>University of California - Berkeley</b>
+    <p><b>No Projects yet :/</b>
         <ul>
-            <li>Sophomore, expecting to graduate in 2025</li>
-            <li>Studying Computer Science/Electrical Engineering under the College of Engineering</li>
-            <li>GPA: TBD</li>
-            <li>42 units completed</li>
-        </ul>
-    </p>
-    <p><b>Foothill High School</b>
-        <ul>
-            <li>GPA (unweighted): 3.95</li>
-            <li>GPA (weighted): 4.42</li>
-            <li>total of 12 units taken either over the summer or dual-enrolled at Shasta College (CC)</li>
+            <li type="None">This website is my first project :)</li>
         </ul>
     </p>
    </div>
-
-   <div class="divider">Extracurriculars/Volunteer Work</div>
-   <div class="inner">
-    <dl>
-      <dt>FHS Track and Field | 9th-12th grade | spring semester</dt>
-      <dd>Learned teamwork and the feeling of unity that being part of a team brings.</dd>
-      <dt>FHS Cross Country| 9th-12th grade | fall semester</dt>
-      <dd>Tested my mental and physical strength, learned endurance and time management through having practice and homework every day.</dd>
-      <dt>FHS Science Bowl| 11th-12th grade | all year</dt>
-      <dd>Practiced all year for a national competiton in the late spring. Teamwork and quick, critical thinking were essential to our success.</dd>
-      <dt>FHS Science Club| 9th-12th grade | all year</dt>
-      <dd>Weekly meetings discussing events; Our main event Starry Night was where students laid under the stars and we provided snacks, telescopes, and music. </dd>
-      <dt>Nature Bridge</dt>
-      <dd>40 hours of volunteer work to help Downtown Redding become a more people-friendly place. Designed flyers, set up booths, and planned community events every week.</dd>
-    </dl>
-   </div>
-
-  <div class="divider">Contact Me</div>
-  <div class="inner">
-  <a href="mailto:jrgarbe7@gmail.com" target="_blank">Email</a> -
-  <a href="https://www.instagram.com/jr_garbe/" target="_blank">Instagram</a> -
-  <a href="https://www.linkedin.com/in/jr-garbe-4350a4234/" target="_blank">LinkedIn</a> -
-  <a href="https://github.com/jaymesgarbe" target="_blank">Github</a> 
-  </div>
-
 
  </div>
 	
