--- a/pics.html
+++ b/pics.html
@@ -112,11 +112,12 @@
 
 <div id="wrapper">
 	<div id="sidenav">
-           <ul>
-             <li><a href="/">home</a></li>
-	     <li><a href="pics.html">pics of me</a></li>
-	     <li><a href="projects.html">projects</a></li>
-	    </ul>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="pics.html">Pics of Me</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="songs.html">Song of the Week</a></li>
+    </ul>
 	 </div>
  <div id="main">
   <h1>Pics of Me</h1>
