--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     body {
       background: top center fixed #3A606E;
       font-family: Georgia, serif;
-      font-size: 15px;
-	    
+      font-size: 15px;  
     }
  
     #wrapper {
@@ -114,7 +113,7 @@
       <li><a href="/">Home</a></li>
       <li><a href="pics.html">Pics of Me</a></li>
       <li><a href="projects.html">Projects</a></li>
-      <li><a href="songs.html">Song of the Week</a></li>
+      <li><a href="songs.html">Song of the Week :)</a></li>
     </ul>
 	 </div>
  <div id="main">
