--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <li><a href="/">Home</a></li>
       <li><a href="pics.html">Pics of Me</a></li>
       <li><a href="projects.html">Projects</a></li>
-      <li><a href="songs.html">Song of the Week :)</a></li>
+      <li><a href="songs.html">Song of the Week</a></li>
     </ul>
 	 </div>
  <div id="main">
