copied over code I did at work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       background: top center fixed #3A606E;
       font-family: Georgia, serif;
-      font-size: 15px;
+      font-size: 15px;  
     }
  
     #wrapper {
@@ -79,6 +79,10 @@
     
     ul {
 	  -webkit-padding-start: 20px;
+    }
+
+    .projects {
+      padding-left: 40px;
     }
 
     dt {
@@ -155,9 +159,31 @@
     </dl>
    </div>
 
+   <div class="divider">Work Experience</div> 
+    <div class="inner">
+      <h3>SUHSD Information Technology Dept. | Summer Intership '22</h3>
+      <h4>Synopsis:</h4> 
+      <p>General description of my time, include all software and stuff like that</p>
+      <h4>Projects:</h4>
+      <dl class="projects">
+        <dt>Data Metric</dt>
+        <dd>description of data-metric</dd>
+        <dt>SPSFreshService/SPSImmyBot</dt>
+        <dd>description of SPSFreshService</dd>
+        <dt>Clever Toolkit</dt>
+        <dd>description of Clever Toolkit</dd>
+        <dt>Aeries-FreshService Sync</dt>
+        <dd>description of Aeries-FreshService Sync</dd>
+      </dl>
+      <h4>Miscellaneous Skills:</h4>
+      <p>Other things I learned as I id my projects such as Powershell, Azure DevOps environment (pipelines), Google Workspace, code documentation, peer review etc.</p>
+    </div>
+
   <div class="divider">Contact Me</div>
   <div class="inner">
-  <a href="mailto:jrgarbe7@gmail.com" target="_blank">Email</a> -
+  <a href="mailto:jrgarbe7@gmail.com" target="_blank">
+    <img src="images/email.png" alt="Email">
+  </a>
   <a href="https://www.instagram.com/jr_garbe/" target="_blank">Instagram</a> -
   <a href="https://www.linkedin.com/in/jr-garbe-4350a4234/" target="_blank">LinkedIn</a> -
   <a href="https://github.com/jaymesgarbe" target="_blank">Github</a> 
