--- a/songs.html
+++ b/songs.html
@@ -121,7 +121,7 @@
 
       @font-face {
         font-family: Seventies;
-        src: url("seventies_font.ttf");
+        src: url("images/playfair.otf");
       }
 
       img {
@@ -147,25 +147,31 @@
       </div>
       <div id="main">
         <h1>Song of the Week</h1>
-        <h2 style="font-size: 40px">Week 1: Desafinado - Kali Uchis</h2>
+        <h2 style="font-size: 30px">Week 2: Slide Around - Chance the Rapper</h2>
         <div class="row">
           <div class="column">
             <img
-              src="desafinado.jpg"
+              src="images/slide_around.png"
               alt="Cover art for Desafinado by Kali Uchis"
               height="250"
             />
-            <h2>Overall Rating: 9.1/10</h2>
+            <h2>Overall Rating: 8.3/10</h2>
           </div>
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p>
-              The only two choruses sung at the very end of the unfortunately
-              short song are a true blessing to my ears each and every time I
-              reach the finale.
+              There are so many good parts of this song
+              inlcuding when chance goes "ch-ch-chia" and 
+              Nicki's adlibbing throughout the song. 
+              "No Grammy, still a goat, though" from Queen Nic 
+              has to take the top spot though
             </p>
             <h2>Overall Review</h2>
-            <p>I'm obsessed</p>
+            <p>A hidden gem in an otherwise underwhelming
+              debut album by Chance the Rapper. Without the 
+              wealthy contribution of Nicki Minaj, this track
+              would likely blend in with the rest.
+            </p>
           </div>
         </div>
       </div>
