--- a/songs.html
+++ b/songs.html
@@ -164,7 +164,7 @@
               inlcuding when chance goes "ch-ch-chia" and 
               Nicki's adlibbing throughout the song. 
               "No Grammy, still a goat, though" from Queen Nic 
-              has to take the top spot though
+              has to take the top spot though.
             </p>
             <h2>Overall Review</h2>
             <p>A hidden gem in an otherwise underwhelming
