finished work experience

--- a/index.html
+++ b/index.html
@@ -204,7 +204,33 @@
         </dd>
       </dl>
       <h4>Miscellaneous Skills:</h4>
-      <p>Other things I learned as I id my projects such as Powershell, Azure DevOps environment (pipelines), Google Workspace, code documentation, peer review etc.</p>
+      <dl class="projects">  
+        <dt>Powershell</dt>
+        <dd>I knew nothing of the Powershell language before starting this
+        job. I've learned nearly as much about the basics of the Powershell language in these three
+        months than I learned about Python my first year at college. I even began to dive into 
+        slightly more advanced concepts that Powershell allows such as dynamic variables, Pester testing,
+        and logging.
+        </dd>
+        <dt>Azure DevOps</dt>
+        <dd>My partner and I worked almost solely within the Azure Devops environment.
+        I learned a ton about using Azure boards for project cooperation, Azure Pipelines for 
+        automation of numerous different tasks, and, of course, Azure Repos for all the lovely version 
+        control. I was also introduced to Virtual Machines, Azure SQL, and used Azure Virtual 
+        Desktop to do some overtime from home. 
+        <dt>Google Workspace</dt>
+        <dd>I worked a lot with the Google APIs Explorer, as well as Google Apps Script for automation 
+          of all of my applications. My final project, Clever Toolkit, introduced me to the Chrome Developers
+          environment as well.
+        </dd>
+        <dt>Teamwork</dt>
+        <dd>The most valuable thing I learned this summer was how to program as part of a team.
+          It became second nature to document my code thoroughly, and I would never make a commit to 
+          the main branch without peer review of a pull request or something of that manner. I 
+          learned Pair Programming in school, and my partner and I used it often to work through bugs 
+          or complex issues that we could not figure out by ourselves.
+        </dd>
+      </dl>
     </div>
 
   <div class="divider">Contact Me</div>
