--- a/index.html
+++ b/index.html
@@ -235,18 +235,13 @@
 
   <div class="divider">Contact Me</div>
   <div class="inner">
-  <a href="mailto:jrgarbe7@gmail.com" target="_blank">
-    <img src="images/email.png" alt="Email">
-  </a>
-  <a href="https://www.instagram.com/jr_garbe/" target="_blank">
-    <img src="images/instagram.png" alt="Instagram">
-  </a> 
-  <a href="https://www.linkedin.com/in/jr-garbe-4350a4234/" target="_blank">
-    <img src="images/linkedin.png" alt="LinkedIn">
-  </a>
-  <a href="https://github.com/jaymesgarbe" target="_blank">
-    <img src="images/github.png" alt="Github">
-  </a> 
+    <a href="mailto:jrgarbe7@gmail.com" target="_blank">Email</a>
+     - 
+    <a href="https://www.instagram.com/jr_garbe/" target="_blank">Instagram</a>
+     - 
+    <a href="https://www.linkedin.com/in/jr-garbe-4350a4234/" target="_blank">LinkedIn</a>
+     - 
+    <a href="https://github.com/jaymesgarbe" target="_blank">Github</a> 
   </div>
  </div>
 </div> 
