--- a/songs.html
+++ b/songs.html
@@ -62,9 +62,22 @@
         font-size: large;
         background-color: #80a4ed;
         margin-top: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         padding: 3px;
         padding-left: 6px;
+      }
+
+      .button {
+        text-align: center;
+      }
+
+      #updateButton {
+        border: 3px solid #d4cb92;
+        border-radius: 4px;
+      }
+
+      #updateButton:hover {
+        background-color: #d4cb92;
       }
 
       .inner {
@@ -147,19 +160,20 @@
       </div>
       <div id="main">
         <h1>Song of the Week</h1>
-        <h2 style="font-size: 30px">Week 2: Slide Around - Chance the Rapper</h2>
+        <h2 style="font-size: 30px" id="title">Week 2: Slide Around - Chance the Rapper</h2>
         <div class="row">
           <div class="column">
             <img
+              id="imgSrc"
               src="images/slide_around.png"
               alt="Cover art for Desafinado by Kali Uchis"
               height="250"
             />
-            <h2>Overall Rating: 8.3/10</h2>
+            <h2 id="rating">Overall Rating: 8.3/10</h2>
           </div>
           <div class="column">
             <h2>Fav Part of Song</h2>
-            <p>
+            <p id="favPart">
               There are so many good parts of this song
               inlcuding when chance goes "ch-ch-chia" and 
               Nicki's adlibbing throughout the song. 
@@ -167,14 +181,22 @@
               has to take the top spot though.
             </p>
             <h2>Overall Review</h2>
-            <p>A hidden gem in an otherwise underwhelming
+            <p id="overall">A hidden gem in an otherwise underwhelming
               debut album by Chance the Rapper. Without the 
               wealthy contribution of Nicki Minaj, this track
               would likely blend in with the rest.
             </p>
           </div>
         </div>
+        <div class="divider"><center>Song of the Week Archive</center></div>
+        <div id="archive">
+        <p><b><center>Week 1: Desafinado - Kali Uchis</center></b></p>
+        </div>
+        <div class="button">
+        <button type="button" id="updateButton" onclick="updateSotW()"><b>Update Song of the Week</b></button>
+        </div>
       </div>
+      <script src="updateSotw.js"></script>
     </div>
   </body>
 </html>
