--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <ul>
             <li>Sophomore, expecting to graduate in 2025</li>
             <li>Studying Computer Science/Electrical Engineering under the College of Engineering</li>
-            <li>GPA: TBD</li>
+            <li>GPA: 2.65</li>
             <li>42 units completed</li>
         </ul>
     </p>
