--- a/songs.html
+++ b/songs.html
@@ -160,37 +160,39 @@
       </div>
       <div id="main">
         <h1>Song of the Week</h1>
-        <h2 style="font-size: 30px" id="title">Week 2: Slide Around - Chance the Rapper</h2>
+        <h2 style="font-size: 30px" id="title">Week 3: Lisa Sawyer - Leon Bridges</h2>
         <div class="row">
           <div class="column">
             <img
               id="imgSrc"
-              src="images/slide_around.png"
-              alt="Cover art for Desafinado by Kali Uchis"
+              src="images/sotw.png"
+              alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.3/10</h2>
+            <h2 id="rating">Overall Rating: 9.3/10</h2>
           </div>
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              There are so many good parts of this song
-              inlcuding when chance goes "ch-ch-chia" and 
-              Nicki's adlibbing throughout the song. 
-              "No Grammy, still a goat, though" from Queen Nic 
-              has to take the top spot though.
+              Literally any word this man speaks is heaven-sent. 
+              That being said, I absolutely adore how he sings 
+              the line "the complex-ion of a sweet praline". The 
+              following rhymes of that stanza flow so beautifully 
+              and arrhythmically imperfect as well.
             </p>
             <h2>Overall Review</h2>
-            <p id="overall">A hidden gem in an otherwise underwhelming
-              debut album by Chance the Rapper. Without the 
-              wealthy contribution of Nicki Minaj, this track
-              would likely blend in with the rest.
+            <p id="overall">I was fully prepared to put a different 
+              song in place (a certain late-summer bombshell by Nicki Minaj),
+              yet I heard this song for the first time in quite some time 
+              and realized that this just needed to take the spot. 
+              Applau
             </p>
           </div>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
         <div id="archive">
         <p><b><center>Week 1: Desafinado - Kali Uchis</center></b></p>
+        <p><b><center>Week 2: Slide Around - Chance the Rapper</center></b></p>
         </div>
         <div class="button">
         <button type="button" id="updateButton" onclick="updateSotW()"><b>Update Song of the Week</b></button>
