--- a/songs.html
+++ b/songs.html
@@ -182,6 +182,9 @@
               height="250"
             />
             <h2 id="rating">Overall Rating: 9.3/10</h2>
+            <h2>Listen Here</h2>
+            <a href="https://open.spotify.com/search/lisa%20sawyer" target="_blank"><h3><center>Spotify</center></h3></a>
+            <a href="https://www.youtube.com/watch?v=Tx41vxJWyYU" target="_blank"><h3><center>Youtube</center></h3></a>
           </div>
           <div class="column">
             <h2>Fav Part of Song</h2>
