restored review text

--- a/songs.html
+++ b/songs.html
@@ -210,7 +210,7 @@
               song in place (a certain late-summer bombshell by Nicki Minaj),
               yet I heard this song for the first time in quite some time 
               and realized that this just needed to take the spot. 
-              Applau
+              Applause.
             </p>
           </div>
         </div>
@@ -235,9 +235,8 @@
           </table>
         </div>
         <div class="button">
+          <button type="button" id="updateButton" onclick="updateSotW()"><b>Update Song of the Week</b></button>
           <script src="updateSotw.js"></script>
-            <button type="button" id="updateButton" onclick="test()"><b>Update Song of the Week</b></button>
-          <script src="updateSotW.js"></script>
         </div>
       </div>
     </div>
