--- a/pics.html
+++ b/pics.html
@@ -106,6 +106,15 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WR2HL3LG91"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WR2HL3LG91');
+  </script>
   <body>
     <div id="wrapper">
       <div id="sidenav">
