--- a/songs.html
+++ b/songs.html
@@ -251,6 +251,16 @@
               target="_blank"
               ><h3><center>Youtube</center></h3></a
             >
+            <br /><br />
+            <div class="button">
+              <button
+                type="button"
+                id="updateButton"
+                onclick="addToNewsletter()"
+              >
+                <b>Subscribe for Email Notifications</b>
+              </button>
+            </div>
           </div>
           <div class="column">
             <h2>Fav Part of Song</h2>
@@ -288,11 +298,6 @@
               <td>8.3/10</td>
             </tr>
           </table>
-        </div>
-        <div class="button">
-          <button type="button" id="updateButton" onclick="addToNewsletter()">
-            <b>Subscribe for Email Notifications</b>
-          </button>
         </div>
       </div>
     </div>
