--- a/songs.html
+++ b/songs.html
@@ -200,6 +200,10 @@
         font-size: larger;
         margin: 10px;
       }
+
+      b {
+        font-size: 16px;
+      }
     </style>
   </head>
   <!-- Google tag (gtag.js) -->
@@ -258,7 +262,7 @@
                 id="updateButton"
                 onclick="addToNewsletter()"
               >
-                <b>Subscribe for Email Notifications</b>
+                <b>Subscribe for <br />Email Notifications</b>
               </button>
             </div>
           </div>
