button disappears after submit

--- a/songs.html
+++ b/songs.html
@@ -133,6 +133,13 @@
         display: flex;
       }
 
+      .afterButton {
+        font-weight: light;
+        color: #d4cb92;
+        font-size: small;
+        text-decoration: underline;
+      }
+
       h1,
       h2 {
         text-align: center;
@@ -256,7 +263,7 @@
               ><h3><center>Youtube</center></h3></a
             >
             <br /><br />
-            <div class="button">
+            <div class="button" id="emailButton">
               <button
                 type="button"
                 id="updateButton"
