added div for celeb SotW

--- a/songs.html
+++ b/songs.html
@@ -290,6 +290,37 @@
             </p>
           </div>
         </div>
+        <div id="celebSotW" hidden>
+          <div class="divider"><center>Celebrity Song of the Week</center></div>
+          <h2 style="font-size: 30px" id="title">
+            {{Name}}: {{Title}} - {{Artist}}
+          </h2>
+          <div class="row">
+            <div class="column">
+              <h2 id="rating">Overall Rating: 9.3/10</h2>
+              <h2>Listen Here</h2>
+              <a
+                href="https://open.spotify.com/track/2LT411lEiNGDJyOZLHL5Ak?si=1ce210e89f564213"
+                target="_blank"
+                ><h3><center>Spotify</center></h3></a
+              >
+              <a
+                href="https://www.youtube.com/watch?v=Tx41vxJWyYU"
+                target="_blank"
+                ><h3><center>Youtube</center></h3></a
+              >
+            </div>
+            <div class="column">
+              <h2>Overall Review</h2>
+              <p id="overall">
+                I was fully prepared to put a different song in place (a certain
+                late-summer bombshell by Nicki Minaj), yet I heard this song for
+                the first time in quite some time and realized that this just
+                needed to take the spot. Applause.
+              </p>
+            </div>
+          </div>
+        </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
         <div id="archive">
           <table style="width: 100%">
