--- a/songs.html
+++ b/songs.html
@@ -211,6 +211,11 @@
       b {
         font-size: 16px;
       }
+
+      #celebOverall {
+        margin-left: 20px;
+        margin-right: 20px;
+      }
     </style>
   </head>
   <!-- Google tag (gtag.js) -->
@@ -239,8 +244,11 @@
       </div>
       <div id="main">
         <h1>Song of the Week</h1>
-        <h2 style="font-size: 30px" id="title">
-          Week 3: Lisa Sawyer - Leon Bridges
+        <h2
+          style="font-size: 30px; margin-left: 10px; margin-right: 10px"
+          id="title"
+        >
+          Week 4: Look in My Eyes - Tower of Power
         </h2>
         <div class="row">
           <div class="column">
@@ -250,15 +258,15 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 9.3/10</h2>
+            <h2 id="rating">Overall Rating: 8.5/10</h2>
             <h2>Listen Here</h2>
             <a
-              href="https://open.spotify.com/track/2LT411lEiNGDJyOZLHL5Ak?si=1ce210e89f564213"
+              href="https://open.spotify.com/track/3xq9srnNN0LBvha15ZWpTU?si=cbc279935aa84a1e"
               target="_blank"
               ><h3><center>Spotify</center></h3></a
             >
             <a
-              href="https://www.youtube.com/watch?v=Tx41vxJWyYU"
+              href="https://www.youtube.com/watch?v=YAfe2RGWmtc"
               target="_blank"
               ><h3><center>Youtube</center></h3></a
             >
@@ -276,28 +284,29 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Literally any word this man speaks is heaven-sent. That being
-              said, I absolutely adore how he sings the line "the complex-ion of
-              a sweet praline". The following rhymes of that stanza flow so
-              beautifully and arrhythmically imperfect as well.
+              SAXOPHONE. I mean there really aren't too many lyrics to this
+              song, just listen to Tom Politzer play his sax. It's that simple.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I was fully prepared to put a different song in place (a certain
-              late-summer bombshell by Nicki Minaj), yet I heard this song for
-              the first time in quite some time and realized that this just
-              needed to take the spot. Applause.
+              A lot of songs filled my ears this week, and adopting a favorite
+              was grueling. I chose this song due to the band's geographic
+              relevance to be completely honest. That being said, this song is
+              so suave, scrumptious, and ultimately unanalyzable that you must
+              give it a listen.
             </p>
           </div>
         </div>
-        <div id="celebSotW" hidden>
+        <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            {{Name}}: {{Title}} - {{Artist}}
+            Jack Garbe: DUCKWORTH. - Kendrick Lamar
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9.3/10</h2>
+              <h2 id="rating">Overall Rating: 8.8/10</h2>
+            </div>
+            <div class="column">
               <h2>Listen Here</h2>
               <a
                 href="https://open.spotify.com/track/2LT411lEiNGDJyOZLHL5Ak?si=1ce210e89f564213"
@@ -310,16 +319,19 @@
                 ><h3><center>Youtube</center></h3></a
               >
             </div>
-            <div class="column">
-              <h2>Overall Review</h2>
-              <p id="overall">
-                I was fully prepared to put a different song in place (a certain
-                late-summer bombshell by Nicki Minaj), yet I heard this song for
-                the first time in quite some time and realized that this just
-                needed to take the spot. Applause.
-              </p>
-            </div>
           </div>
+          <h2>Overall Review</h2>
+          <p id="celebOverall">
+            This song is one of many examples as to why Kendrick’s storytelling
+            is the best of all time. His ability to create a track that has a
+            complex meaning, while also allowing for a casual listen is truly an
+            art. He deliberately places this song at the end of his 2017 album,
+            DAMN, where he walks us through his toughest life lessons. DUCKWORTH
+            wraps up the theme of the album by illustrating a day through
+            Kendrick’s father’s perspective that led to a change in perspective
+            for Kendrick. A beautiful song on an even more beautiful album, I
+            highly recommend.
+          </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
         <div id="archive">
@@ -338,6 +350,11 @@
               <td>2</td>
               <td>Slide Around - Chance the Rapper</td>
               <td>8.3/10</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Lisa Sawyer - Leon Bridges</td>
+              <td>9.3/10</td>
             </tr>
           </table>
         </div>
