--- a/songs.html
+++ b/songs.html
@@ -309,12 +309,12 @@
             <div class="column">
               <h2>Listen Here</h2>
               <a
-                href="https://open.spotify.com/track/2LT411lEiNGDJyOZLHL5Ak?si=1ce210e89f564213"
+                href="https://open.spotify.com/track/0y9uTzK9cNKSAEHnpeRG8C?si=0040e7b15e614898"
                 target="_blank"
                 ><h3><center>Spotify</center></h3></a
               >
               <a
-                href="https://www.youtube.com/watch?v=Tx41vxJWyYU"
+                href="https://www.youtube.com/watch?v=Dm-foWGDBF0"
                 target="_blank"
                 ><h3><center>Youtube</center></h3></a
               >
